# skills-hub

./: .gitignore  README.md
.develop/: move.sh
.develop/crxhub-cli/: README.md  build.sh  move.sh  move.yaml
.develop/crxhub-cli/scripts/: crx-darwin-arm64  crx-linux-x86_64
.develop/crxhub-cli/src/commands/: install.rs  list.rs  mod.rs  remove.rs  update.rs
.develop/crxhub-cli/src/utils/: extension.rs  repo.rs
.develop/real-browser/: README.md
develop/crxhub-cli/: Cargo.toml  SKILL.md
develop/crxhub-cli/src/: main.rs
develop/crxhub-cli/src/commands/: cleanup.rs  info.rs  mod.rs  remove.rs
develop/crxhub-cli/src/utils/: config.rs  extension.rs  github.rs
develop/npmjs-cli/: SKILL.md  move.yaml
develop/real-browser/: SKILL.md
skills-develop/crxhub-cli/: build.sh
skills-develop/crxhub-cli/src/: main.rs
skills-develop/real-browser/: move.yaml
skills/charles-cli/: SKILL.md
skills/charles-cli/scripts/: charles-cli-darwin-arm64  charles-cli-darwin-x86_64  charles-cli-linux-x86_64  charles-fast.sh
skills/crxhub-cli/: SKILL.md
skills/crxhub-cli/scripts/: crx  crx-darwin-x86_64
skills/gh-cli/: SKILL.md
skills/n8n-cli/: CLAUDE.md
skills/real-browser/: SKILL.md
skills/real-browser/scripts/: real_browser.sh
skills/svg2icon/: SKILL.md
skills/svg2icon/evals/: evals.json
skills/svg2icon/scripts/: generate_tauri_icons.sh
skills/tauri-updater/: SKILL.md
skills/tauri-updater/evals/: evals.json
skills/tauri-updater/references/: UpdateBar.tsx  build_merged_latest_json.cjs  release.yml  useUpdater.ts
(+6 files in other folders)
