[package]
name = "crxhub"
version = "1.0.0"
edition = "2021"
description = "Download and version browser extensions from GitHub Releases"
authors = ["CrxHub Team"]
license = "MIT"
repository = "https://github.com/yourusername/crxhub"
keywords = ["chrome", "extension", "crx", "github", "browser", "edge"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.80"

[[bin]]
name = "crx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
dirs = "5.0"
dialoguer = "0.11"
zip = "0.6"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.9"
glob = "0.3"
base64 = "0.21"
fs2 = "0.4"
wait-timeout = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
